# wasm2native-poc

./: .gitignore  LICENSE  Makefile  README.md  adder-test.c  test.sh  test.wat  wasm2native.pl
adder-test-rs/: Cargo.toml  README.md
adder-test-rs/src/: main.rs
tests/block-simple/: test.wat
tests/block-simple-br/: test.wat
tests/block-simple-br-if/: test.wat
tests/block-simple-br-if-else/: test.wat
tests/br-table/: test.wat
tests/call-indirect/: test.wat
tests/call-many-params/: test.wat
tests/call-simple/: test.wat
tests/comparison/: test.wat
tests/control-flow/: test.wat
tests/data-segment/: test.wat
tests/i32.const/: test.wat
tests/locals-globals/: test.wat
tests/logical/: test.wat
tests/memory.grow/: test.wat
tests/numeric/: test.wat
tests/return/: test.wat
tests/store/: test.wat
